<resources>
    <!-- Menu -->
    <string name="app_name">Tic Tac Toe</string>
    <string name="joueur1">UN JOUEUR</string>
    <string name="joueur2">DEUX JOUEUR</string>
    <string name="about">À PROPOS</string>
    <string name="fermer">FERMER</string>

    <!-- Identification -->
    <string name="p1">Joueur 1: </string>
    <string name="p2">Joueur 2: </string>
    <string name="jouer">JOUEUR</string>

    <!-- Jeu -->
    <string name="menu">MENU</string>
    <string name="reset">RECOMMENCER</string>

    <!-- A Propos -->
    <string name="jeuNom">Jeu: Tic Tac Toe</string>
    <string name="jeuDescription">Description: Création d\'un jeu de Tic Tac Toe pour notre entreprise ACME</string>
    <string name="creerPar">Créer Par: Alperen Albaz, Shajaan Balasingam et Gafran Ijaz</string>
    <string name="groupe">Groupe: 02</string>
    <string name="cours">Cours: 420-G25-RO</string>
    <string name="date">Date de remise: 20 mai 2022</string>

    <!-- Un joueur -->
    <string name="vsAI">En Construction</string>
    <string name="title_activity_victoire">VictoireActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>