<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".JeuActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="20dp">

        <TextView
            android:id="@+id/scoreJoeur1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/p1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="20dp">

        <TextView
            android:id="@+id/scoreJoeur2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/p2" />
    </LinearLayout>

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="#000000"
        android:padding="30dp">

        <androidx.gridlayout.widget.GridLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <ImageView
                android:id="@+id/btn_0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@android:drawable/gallery_thumb" />

            <ImageView
                android:id="@+id/btn_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@android:drawable/gallery_thumb" />

            <ImageView
                android:id="@+id/btn_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@android:drawable/gallery_thumb" />

            <ImageView
                android:id="@+id/btn_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_column="0"
                app:layout_row="1"
                app:srcCompat="@android:drawable/gallery_thumb" />

            <ImageView
                android:id="@+id/btn_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@android:drawable/gallery_thumb" />

            <ImageView
                android:id="@+id/btn_5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@android:drawable/gallery_thumb" />

            <ImageView
                android:id="@+id/btn_6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_column="0"
                app:layout_row="2"
                app:srcCompat="@android:drawable/gallery_thumb" />

            <ImageView
                android:id="@+id/btn_7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@android:drawable/gallery_thumb" />

            <ImageView
                android:id="@+id/btn_8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@android:drawable/gallery_thumb" />
        </androidx.gridlayout.widget.GridLayout>

        <View
            android:id="@+id/center_vertical"
            android:layout_width="5dp"
            android:layout_height="250dp"
            android:layout_gravity="center"
            android:background="@color/stick_color"
            android:visibility="invisible" />

        <View
            android:id="@+id/left_vertical"
            android:layout_width="5dp"
            android:layout_height="250dp"
            android:layout_gravity="center"
            android:layout_marginEnd="70dp"
            android:layout_marginRight="70dp"
            android:background="@color/stick_color"
            android:visibility="invisible" />

        <View
            android:id="@+id/right_vertical"
            android:layout_width="5dp"
            android:layout_height="250dp"
            android:layout_gravity="center"
            android:layout_marginStart="70dp"
            android:layout_marginLeft="70dp"
            android:background="@color/stick_color"
            android:visibility="invisible" />

        <View
            android:id="@+id/center_horizontal"
            android:layout_width="250dp"
            android:layout_height="5dp"
            android:layout_gravity="center"
            android:background="@color/stick_color"
            android:visibility="invisible" />

        <View
            android:id="@+id/bottom_horizontal"
            android:layout_width="250dp"
            android:layout_height="5dp"
            android:layout_gravity="center"
            android:layout_marginTop="70dp"
            android:background="@color/stick_color"
            android:visibility="invisible" />

        <View
            android:id="@+id/top_horizontal"
            android:layout_width="250dp"
            android:layout_height="5dp"
            android:layout_gravity="center"
            android:layout_marginBottom="70dp"
            android:background="@color/stick_color"
            android:visibility="invisible" />

        <View
            android:id="@+id/right_left_diagonal"
            android:layout_width="5dp"
            android:layout_height="350dp"
            android:layout_gravity="center"
            android:background="@color/stick_color"
            android:rotation="45"
            android:visibility="invisible" />

        <View
            android:id="@+id/left_right_diagonal"
            android:layout_width="5dp"
            android:layout_height="350dp"
            android:layout_gravity="center"
            android:background="@color/stick_color"
            android:rotation="135"
            android:visibility="invisible" />

    </FrameLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="221dp">

        <Button
            android:id="@+id/button6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:text="@string/menu"
            app:layout_constraintEnd_toStartOf="@+id/button7"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/button7" />

        <Button
            android:id="@+id/button7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center|right|center_horizontal"
            android:text="@string/reset"
            tools:layout_editor_absoluteX="260dp"
            tools:layout_editor_absoluteY="174dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>